# SortingAlgorithm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SortingAlgorithmBase.h  main.cpp
Algorithm/: SelectionSortAlgorithm.h
Algorithms/: InsertSortAlgorithm.h  SortingAlgorithmBase.h
Tests/: TestSuiteService.h
algorithm/: InsertSortAlgorithm.h  MergeSortAlgorithm.h  QuickSortAlgorithm.h  SelectionSortAlgorithm.h  SortingAlgorithmBase.h
benchmark/: BenchmarkRunner.h
test/: CMakeLists.txt
test/algorithm/: CMakeLists.txt  InsertSortAlgorithmTest.cpp  MergeSortAlgorithmTest.cpp  QuickSortAlgorithmTest.cpp  SelectionSortAlgorithmTest.cpp
util/: TestSuiteService.h
